--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h4><span></span><i class="bi bi-music-note-beamed"></i>Recommended</h4>
             </div>
             <div class="menu_song">
-                <li class="songItem">
+                <li class="songItem ">
                     <span>01</span>
                     <img src="img/1.jpg" alt="beep song">
                     <h5>
@@ -124,7 +124,7 @@
             <div class="content">
                 <h1>Vibezz💥❤‍🔥- Tamizh</h1>
                 <p>
-                    Sad paatu venuma irukku.. Melodies venuma adhuvum irukku.. 
+                    Soogha paatu venuma irukku.. Melodies venuma adhuvum irukku.. 
                     <br>
                     Vibe paatu venuma vibe irukku.. yellam mode kum paatu irukku..
                 </p>
@@ -249,7 +249,17 @@
                         </div>
                         <h5>
                             Nee partha
-                            <div class="subtitle">Aniruth</div>
+                            <div class="subtitle">Anirudh</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img_play">
+                            <img src="img/21.jpg" alt="Manasilaayo">
+                            <i class="bi playListPlay bi-play-circle-fill" id="21"></i>
+                        </div>
+                        <h5>
+                            Manasilaayo
+                            <div class="subtitle">Anirudh</div>
                         </h5>
                     </li>
                 </div>
